--- a/node/package.json
+++ b/node/package.json
@@ -1,6 +1,7 @@
 {
   "name": "brackets-sass-node",
   "devDependencies": {
-    "node-sass": "0.8.0"
+    "node-sass": "0.8.0",
+    "fs-extra": "0.8.1"
   }
 }
