--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "homepage": "https://github.com/jasonsanjose/brackets-sass",
   "author": "Jason San Jose (https://github.com/jasonsanjose)",
   "license": "MIT",
-  "version": "0.1.1",
+  "version": "0.2.0-1",
   "engines": {
     "brackets": ">=0.38"
   },
