--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@
 /dist
 /node_modules
 /node/1.1.4/node_modules/node-sass/build
+/node/1.1.4/node_modules/node-sass/node_modules/.bin
+/node/1.1.4/node_modules/node-sass/node_modules/coveralls
+/node/1.1.4/node_modules/node-sass/node_modules/cross-spawn
+/node/1.1.4/node_modules/node-sass/node_modules/jscoverage
+/node/1.1.4/node_modules/node-sass/node_modules/jshint
+/node/1.1.4/node_modules/node-sass/node_modules/mocha-lcov-reporter
+/node/1.1.4/node_modules/node-sass/test
+/node/1.1.4/node_modules/node-sass-binaries
