--- a/node/2.0.1/package.json
+++ b/node/2.0.1/package.json
@@ -4,6 +4,7 @@
     "install": "node install.js"
   },
   "devDependencies": {
+    "compass-options": "^0.1.1",
     "fs-extra": "0.8.1",
     "mkdirp": "^0.5.0",
     "node-sass": "2.0.1",
